Vue：菜单管理，其它

--- a/app/Modules/Admin/Resources/vue-element-admin/styles/common.scss
+++ b/app/Modules/Admin/Resources/vue-element-admin/styles/common.scss
@@ -5,3 +5,9 @@
 .danger-text{
     color: #ff4949!important;
 }
+.width-200-px{
+    width: 200px!important;
+}
+.margin-buttom-10{
+    margin-bottom: 10px!important;
+}
