1.版本管理； 2.form input 宽度100%设定； 3.引入 moment。

--- a/app/Modules/Admin/Resources/vue-element-admin/styles/common.scss
+++ b/app/Modules/Admin/Resources/vue-element-admin/styles/common.scss
@@ -19,6 +19,9 @@
     min-width: 500px;
 }
 // 表单 下拉框 100%宽度占比
-.el-form .el-select{
-    width: 100%;
+.el-form{
+    .el-select,
+    .el-input{
+        width: 100%;
+    }
 }
